fix: layout shifts caused by dropdown menus open

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -177,6 +177,11 @@ html {
   overflow-y: scroll;
 }
 
+html body[data-scroll-locked] {
+  overflow: visible !important;
+  margin-right: 0 !important;
+}
+
 [id] {
   scroll-margin-top: 100px;
 }
